backend_streams_transcoding/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stream-controller
  namespace: radio-crestin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stream-controller
  template:
    metadata:
      labels:
        app: stream-controller
    spec:
      serviceAccountName: stream-controller
      automountServiceAccountToken: true
      containers:
        - name: controller
          image: radio-crestin/stream-controller:latest
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            exec:
              command: ["python3", "-c", "import sys; sys.exit(0)"]
            periodSeconds: 30
