backend_streams_transcoding/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stream-controller
  namespace: radio-crestin
spec:
  podSelector:
    matchLabels:
      app: stream-controller
  policyTypes:
    - Ingress
    - Egress
  ingress: []  # No inbound traffic
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: web
      ports:
        - port: 8080
    - to:  # K8s API server
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 443
